<resources>
    <string name="app_name">PregAPP</string>
    <string name="toast1">Rejestracja przebiegła pozytywnie</string>

    <string name="page1_text1">Zaloguj się</string>
    <string name="page1_text2">Załóż konto</string>

    <string name="page2_text1">Rejestracja</string>
    <string name="page2_text2">Adres Email</string>
    <string name="page2_text3">Hasło</string>
    <string name="page2_text4">Powtórz hasło</string>

    <string name="page3_text1">Czy wiesz ile dni trwa twój cykl?</string>

    <string name="page4_text1">Wybierz ile dni trwa twój cykl</string>
    <string name="page4_text2">OK</string>

    <string name="page5_text1">Czy wiesz ile dni trwa twoja miesiączka?</string>

    <string name="page6_text1">Wybierz ile dni trwa twója miesiączka</string>

    <string name="page7_text1">Czy posiadasz dedykowane urządzenie?</string>

    <string name="page8_text1">Podaj numer urządzenia:</string>

    <string name="page9_text1">Logowanie</string>
    <string name="page9_text2">Zaloguj</string>

    <string name="page10_text1">okres za</string>
    <string name="page10_text2">00</string>
    <string name="page10_text3">dni</string>
    <string name="page10_text4">Miesiączka</string>
    <string name="page10_text5">Dni płodne</string>
    <string name="page10_text6">PMS</string>

    <string name="device_page_btn_01">POMIAR</string>
    <string name="device_page_btn_02">MONITOROWANIE CYKLUA</string>
    <string name="device_page_btn_03">OSOBU UPOWAŻNIONE</string>

    <string name="measurements_page_btn_01">POMIAR TEMPERATURY</string>
    <string name="measurements_page_btn_02">POMIAR CIŚNIENIA I SATURACJI</string>
    <string name="measurements_page_btn_03">WYKRES POMIARÓW</string>

    <string name="measure_temperature_text">1. Włącz urządzenie\n2. Przyłóż urządzenie do czoła\n3. Naciśnij przycisk na urządzeniu\n4. Poczekaj 10 sekund\n5. Sprawdź wartość pomiaru
      na urządzeniu</string>

    <string name="measure_saturation_text">1. Włącz urządzenie\n2. Przyłóż palec na wskazane miejsce\n3. Naciśnij przycisk na urządzeniu\n4. Poczekaj 10 sekund\n5. Sprawdź wartość pomiaru
      na urządzeniu</string>

    <string name="data_graph_btn_01">TEMPERATURA</string>
    <string name="data_graph_btn_02">CIŚNIENIE</string>
    <string name="data_graph_btn_03">SATURACJA</string>

    <string name="txt_personal_info_log_out">WYLOGÓJ SIĘ</string>
    <string name="txt_personal_info_keep_changes">ZMIANA DANYCH</string>
    <string name="txt_personal_info_activity">Poziom aktywności</string>
    <string name="txt_personal_info_hight">Wzrost</string>
    <string name="txt_personal_info_weight">Waga</string>
    <string name="txt_personal_info_age">Wiek</string>
    <string name="txt_personal_info_sex">Płeć</string>
    <string name="txt_personal_info_mail">Mail</string>
    <string name="txt_personal_info_username">Username</string>

</resources>