<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_01"
    android:orientation="vertical"
    android:gravity="center|bottom"
    tools:context=".Personal_Info_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="200dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_measurements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect1"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/color1"
            android:textSize="18sp"
            android:text="@string/device_page_btn_01" />

        <Button
            android:id="@+id/btn_data_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect1"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/color1"
            android:textSize="18sp"
            android:text="@string/device_page_btn_02" />

        <Button
            android:id="@+id/btn_authorised_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect1"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/color1"
            android:textSize="18sp"
            android:text="@string/device_page_btn_03" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color4"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="3dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_temperature"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/button_effect2"
            android:scaleType="fitXY"
            android:src="@drawable/menu_temperature_hover" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_calendar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/button_effect2"
            android:scaleType="fitXY"
            android:src="@drawable/menu_calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_main"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/button_effect2"
            android:scaleType="fitXY"
            android:src="@drawable/menu_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_labor"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/button_effect2"
            android:scaleType="fitXY"
            android:src="@drawable/menu_labor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_personal_info"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/button_effect2"
                android:scaleType="fitXY"
                android:src="@drawable/menu_personal_info" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>