<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_01"
    android:orientation="vertical"
    android:gravity="center|bottom">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/page20_button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_effect2"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/data_graph_btn_01"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/page20_button2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/button_effect2"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/data_graph_btn_02"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/page20_button3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/button_effect2"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/data_graph_btn_03"
            android:textColor="@color/white"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color4"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_temperature"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/button_effect2"
                android:scaleType="fitXY"
                android:src="@drawable/menu_temperature" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_calendar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/button_effect2"
                android:scaleType="fitXY"
                android:src="@drawable/menu_calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_main"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/button_effect2"
                android:scaleType="fitXY"
                android:src="@drawable/menu_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_labor"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/button_effect2"
                android:scaleType="fitXY"
                android:src="@drawable/menu_labor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_personal_info"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/button_effect2"
                android:scaleType="fitXY"
                android:src="@drawable/menu_personal_info" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>