<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_01"
    android:orientation="vertical"
    android:gravity="center|bottom"
    tools:context=".Measurements_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="80dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/page17_image1"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/page17_image1" />

            <Button
                android:id="@+id/btm_measure_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_effect1"
                android:fontFamily="@font/roboto"
                android:text="@string/measurements_page_btn_01"
                android:textColor="@color/color1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btm_measure_saturation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_effect1"
                android:fontFamily="@font/roboto"
                android:text="@string/measurements_page_btn_02"
                android:textColor="@color/color1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btm_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_effect1"
                android:fontFamily="@font/roboto"
                android:text="@string/measurements_page_btn_03"
                android:textColor="@color/color1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color4"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_temperature"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_effect2"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_temperature" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_calendar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_effect2"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_main"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_effect2"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_labor"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_effect2"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_labor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_personal_info"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_effect2"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_personal_info" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>